======================== libgnome 2.17.3 ======================

2007-01-10  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_sound.schemas.in: Add two keys for
	the new mixer support in gnome-control-center. Patch from
	Jan Arne Petersen. Closes bug #394731.

======================== libgnome 2.17.2 ======================

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* autogen.sh:
	* configure.in: Use automake 1.9.

2007-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update for the release.
	* schemas/Makefile.am: Add a missing schema.

2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
	* schemas/desktop_gnome_applications_at_visual.schemas.in:
	Add schemas for AT preferred applications. Patch from
	George Kraft IV. Closes bug #387219.

2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_lockdown.schemas.in:
	Add key to disable the screensaver. Patch from
	Guillaume Desmottes. Closes bug #386864.

2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_lockdown.schemas.in:
	Add key to make it possible to disable user switching.
	Patch from Guillaume Desmottes. Closes bug #385119.

2006-12-06  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-macros.h:
	Deprecate these macros. You can use G_DEFINE_TYPE instead.
	Bug #382065.

2006-12-06  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* monikers/GNOME_Moniker_std.server.in.in:
	* monikers/Makefile.am:
	Cygwin fixes from the Cygwin ports maintainer.
	Closes bug #322895

2006-12-06  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-program.h:
	Fix for building with GNOME_DISABLE_DEPRECATED.

2006-12-06  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/tmpl/gnome-program.sgml:
	* libgnome/gnome-program.h:
	Deprecate gnome_program_preinit/parse_args/postinit. Bug #382046.

2006-12-05  Kjartan Maraas  <kmaraas@gnome.org>
